# Thebe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Tasks.txt
Applications/ChineseCheckersExtreme/: CMakeLists.txt
Applications/ChineseCheckersExtreme/Assets/Buffers/: CubicPlatform.index_buffer  CubicPlatform.vertex_buffer  CubicPlatform.vertex_buffer_data  CubicRing.index_buffer  CubicRing.vertex_buffer  CubicRing.vertex_buffer_data  Cubie.index_buffer  Cubie.index_buffer_data  Cubie.vertex_buffer  Cubie.vertex_buffer_data  HexagonalPlatform.index_buffer  HexagonalPlatform.vertex_buffer  HexagonalPlatform.vertex_buffer_data  HexagonalRing.index_buffer  HexagonalRing.index_buffer_data  HexagonalRing.vertex_buffer  HexagonalRing.vertex_buffer_data  OctagonalPlatform.index_buffer  OctagonalPlatform.vertex_buffer  OctagonalPlatform.vertex_buffer_data  OctagonalRing.index_buffer  OctagonalRing.vertex_buffer  OctagonalRing.vertex_buffer_data  Ring.index_buffer  Ring.index_buffer_data  Ring.vertex_buffer  Ring.vertex_buffer_data  SkyDome.vertex_buffer  SkyDome.vertex_buffer_data  (+3 more)
Applications/ChineseCheckersExtreme/Help/: HowToPlay.css  HowToPlay.html
Applications/ChineseCheckersExtreme/Source/: Animation.cpp  Animation.h  Application.cpp  Application.h  BoardCam.cpp  BoardCam.h  Canvas.cpp  Canvas.h  ComputerClient.cpp  ComputerClient.h  Factory.cpp  Factory.h  Frame.cpp  Frame.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  HexagonalGame.cpp  HostGameDialog.cpp  HostGameDialog.h  HumanClient.cpp  HumanClient.h  JoinGameDialog.cpp  JoinGameDialog.h  LifeText.cpp  LifeText.h  MoveSequence.cpp  MoveSequence.h  TriangularGame.cpp  TriangularGame.h
Applications/CollisionLab/: CMakeLists.txt
Applications/CollisionLab/Source/: App.cpp  App.h  Main.cpp  MoverCam.cpp  MoverCam.h
Applications/DebugRenderer/: CMakeLists.txt
Applications/DebugRenderer/Source/: App.cpp  App.h  Main.cpp  Server.cpp  Server.h
Applications/LogViewer/: CMakeLists.txt
Applications/LogViewer/Source/: App.cpp  App.h  Frame.cpp  Frame.h
Applications/PhysicsLab/: CMakeLists.txt
Applications/PhysicsLab/Source/: App.cpp  App.h  JediCam.cpp  JediCam.h  Main.cpp
Applications/Test/: CMakeLists.txt
Applications/Test/Source/: Main.cpp  TestAVLTree.cpp  TestAVLTree.h  TestApplication.cpp  TestApplication.h
Applications/Tool/: CMakeLists.txt
Applications/Tool/Source/: App.cpp  App.h  Builder.cpp  Builder.h  Canvas.cpp  Canvas.h  CubeMapBuilder.cpp  CubeMapBuilder.h  FontBuilder.cpp  FontBuilder.h  Frame.cpp  Frame.h  RBDBuilder.cpp  RBDBuilder.h  SceneBuilder.cpp  SceneBuilder.h  TextureBuilder.cpp  TextureBuilder.h
Engine/: CMakeLists.txt
Engine/Assets/: .gitignore
Engine/Assets/Buffers/: Box001.index_buffer  Box001.vertex_buffer  Box001.vertex_buffer_data  Box002.index_buffer  Box002.vertex_buffer  Box002.vertex_buffer_data  Box003.index_buffer  Box003.vertex_buffer  Box003.vertex_buffer_data  CharacterQuad.vertex_buffer  Plane001.index_buffer  Plane001.vertex_buffer  Plane001.vertex_buffer_data  Plane002.index_buffer  Plane002.vertex_buffer  Plane002.vertex_buffer_data  SkyDome.index_buffer  SkyDome.vertex_buffer  SkyDome.vertex_buffer_data  Sphere001.index_buffer  Sphere001.vertex_buffer  Sphere001.vertex_buffer_data  Sphere002.index_buffer  Sphere002.vertex_buffer  Sphere002.vertex_buffer_data  Sphere003.index_buffer  Sphere003.vertex_buffer  Sphere003.vertex_buffer_data  Teapot001.index_buffer  Teapot001.vertex_buffer  Teapot001.vertex_buffer_data  Teapot002.index_buffer  Teapot002.vertex_buffer  Teapot002.vertex_buffer_data  Torus001.index_buffer  Torus001.vertex_buffer  Torus001.vertex_buffer_data  Torus_Knot001.index_buffer  Torus_Knot001.index_buffer_data  Torus_Knot001.vertex_buffer  (+5 more)
Engine/Assets/Cube/: Cube.index_buffer  Cube.vertex_buffer
Engine/Assets/Fonts/: Roboto_Regular.font  Roboto_Regular.texture_buffer  Roboto_Regular.texture_buffer_data  UbuntuMono_R.font  UbuntuMono_R.texture_buffer  UbuntuMono_R.texture_buffer_data
Engine/Assets/Materials/: BasicLitMaterial.material  BasicMaterial.material  DefaultMaterial.material  Grass.material  Knot.material  LineMaterial.material  MetalCompartments.material  OceanSkyDome.material  PerfectMirror.material  RevineRock.material  RibbedChippedMetal.material  ShadowMaterial.material  SpeckledRust.material  StylizedGrass.material  Teapot.material  TexturedAluminum.material  Torus.material  Tube.material
Engine/Assets/Meshes/: Box001.mesh  Box002.mesh  Box003.mesh  Cube.mesh  Plane001.mesh  Plane002.mesh  SkyDome.mesh  Sphere001.mesh  Sphere002.mesh  Sphere003.mesh  Teapot001.mesh  Teapot002.mesh  Torus001.mesh  Torus_Knot001.mesh  Tube001.mesh
Engine/Assets/Scenes/: ShadowTest.fbx  ShadowTest.max  ShadowTest.scene  Silly.FBX  Silly.max  Silly.scene  Test.scene
Engine/Assets/Shaders/: BasicLitShader.hlsl  BasicLitShader.shader  BasicShader.hlsl  BasicShader.shader  FlatShader.shader  FontShader.hlsl  FontShader.shader  LineShader.hlsl  LineShader.shader  PBRShader.hlsl  PBRShader.shader  PerfectMirror.hlsl  PerfectMirror.shader  ShadowShader.hlsl  ShadowShader.shader  SkyDome.hlsl  SkyDome.shader
Engine/Assets/Textures/: Grass.texture_buffer  Grass.texture_buffer_data  Star.texture_buffer  Star.texture_buffer_data  Stupid.texture_buffer  Stupid.texture_buffer_data  Ugly.texture_buffer  Ugly.texture_buffer_data  Weirdo.texture_buffer  Weirdo.texture_buffer_data
Engine/Scripts/: BuildShaders.py
Engine/Source/Thebe/: Application.cpp  Application.h  AudioSystem.cpp  AudioSystem.h  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  Camera.h  CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  Common.cpp  Common.h  DatagramLog.cpp  DatagramLog.h  Engine.cpp  Engine.h  EnginePart.cpp  EnginePart.h  EventSystem.cpp  EventSystem.h  FreeCam.cpp  FreeCam.h  GraphicsEngine.cpp  GraphicsEngine.h  ImGuiManager.cpp  ImGuiManager.h  Log.cpp  Log.h  Material.h  Mesh.cpp  Mesh.h  NetLog.cpp  NetLog.h  Node.cpp  Node.h  PhysicsSystem.cpp  PhysicsSystem.h  Profiler.cpp  Profiler.h  (+14 more)
(+358 files in other folders)
