# CMakeLists.txt for the Thebe engine library.

set(GRAPHICS_ENGINE_SOURCES
    Source/Thebe/Application.cpp
    Source/Thebe/Application.h
    Source/Thebe/GraphicsEngine.cpp
    Source/Thebe/GraphicsEngine.h
    Source/Thebe/Common.cpp
    Source/Thebe/Common.h
    Source/Thebe/Reference.cpp
    Source/Thebe/Reference.h
    Source/Thebe/Log.cpp
    Source/Thebe/Log.h
    Source/Thebe/NetLog.cpp
    Source/Thebe/NetLog.h
    Source/Thebe/FreeCam.cpp
    Source/Thebe/FreeCam.h
    Source/Thebe/EventSystem.cpp
    Source/Thebe/EventSystem.h
    Source/Thebe/XBoxController.cpp
    Source/Thebe/XBoxController.h
    Source/Thebe/BoundingVolumeHierarchy.cpp
    Source/Thebe/BoundingVolumeHierarchy.h
    Source/Thebe/CollisionSystem.cpp
    Source/Thebe/CollisionSystem.h
    Source/Thebe/PhysicsSystem.cpp
    Source/Thebe/PhysicsSystem.h
    Source/Thebe/Utilities/Clock.cpp
    Source/Thebe/Utilities/Clock.h
    Source/Thebe/Utilities/BlockManager.cpp
    Source/Thebe/Utilities/BlockManager.h
    Source/Thebe/Utilities/JsonHelper.cpp
    Source/Thebe/Utilities/JsonHelper.h
    Source/Thebe/Utilities/ScratchHeap.cpp
    Source/Thebe/Utilities/ScratchHeap.h
    Source/Thebe/Utilities/StackHeap.cpp
    Source/Thebe/Utilities/StackHeap.h
    Source/Thebe/Utilities/CompressionHelper.cpp
    Source/Thebe/Utilities/CompressionHelper.h
    Source/Thebe/Utilities/RingBuffer.cpp
    Source/Thebe/Utilities/RingBuffer.h
    Source/Thebe/Containers/AVLTree.cpp
    Source/Thebe/Containers/AVLTree.h
    Source/Thebe/Containers/LinkedList.cpp
    Source/Thebe/Containers/LinkedList.h
    Source/Thebe/EnginePart.cpp
    Source/Thebe/EnginePart.h
    Source/Thebe/EngineParts/Camera.cpp
    Source/Thebe/EngineParts/Camera.h
    Source/Thebe/EngineParts/CollisionObject.cpp
    Source/Thebe/EngineParts/CollisionObject.h
    Source/Thebe/EngineParts/PhysicsObject.cpp
    Source/Thebe/EngineParts/PhysicsObject.h
    Source/Thebe/EngineParts/FloppyBody.cpp
    Source/Thebe/EngineParts/FloppyBody.h
    Source/Thebe/EngineParts/RigidBody.cpp
    Source/Thebe/EngineParts/RigidBody.h
    Source/Thebe/EngineParts/Material.cpp
    Source/Thebe/EngineParts/Material.h
    Source/Thebe/EngineParts/Mesh.cpp
    Source/Thebe/EngineParts/Mesh.h
    Source/Thebe/EngineParts/RenderObject.cpp
    Source/Thebe/EngineParts/RenderObject.h
    Source/Thebe/EngineParts/RenderTarget.cpp
    Source/Thebe/EngineParts/RenderTarget.h
    Source/Thebe/EngineParts/ShadowBuffer.cpp
    Source/Thebe/EngineParts/ShadowBuffer.h
    Source/Thebe/EngineParts/Space.cpp
    Source/Thebe/EngineParts/Space.h
    Source/Thebe/EngineParts/SwapChain.cpp
    Source/Thebe/EngineParts/SwapChain.h
    Source/Thebe/EngineParts/Shader.cpp
    Source/Thebe/EngineParts/Shader.h
    Source/Thebe/EngineParts/TextureBuffer.cpp
    Source/Thebe/EngineParts/TextureBuffer.h
    Source/Thebe/EngineParts/Buffer.cpp
    Source/Thebe/EngineParts/Buffer.h
    Source/Thebe/EngineParts/VertexBuffer.cpp
    Source/Thebe/EngineParts/VertexBuffer.h
    Source/Thebe/EngineParts/IndexBuffer.cpp
    Source/Thebe/EngineParts/IndexBuffer.h
    Source/Thebe/EngineParts/ConstantsBuffer.cpp
    Source/Thebe/EngineParts/ConstantsBuffer.h
    Source/Thebe/EngineParts/CubeMapBuffer.cpp
    Source/Thebe/EngineParts/CubeMapBuffer.h
    Source/Thebe/EngineParts/Fence.cpp
    Source/Thebe/EngineParts/Fence.h
    Source/Thebe/EngineParts/Scene.cpp
    Source/Thebe/EngineParts/Scene.h
    Source/Thebe/EngineParts/CommandQueue.cpp
    Source/Thebe/EngineParts/CommandQueue.h
    Source/Thebe/EngineParts/CommandAllocator.cpp
    Source/Thebe/EngineParts/CommandAllocator.h
    Source/Thebe/EngineParts/MeshInstance.cpp
    Source/Thebe/EngineParts/MeshInstance.h
    Source/Thebe/EngineParts/DescriptorHeap.cpp
    Source/Thebe/EngineParts/DescriptorHeap.h
    Source/Thebe/EngineParts/UploadHeap.cpp
    Source/Thebe/EngineParts/UploadHeap.h
    Source/Thebe/EngineParts/Light.cpp
    Source/Thebe/EngineParts/Light.h
    Source/Thebe/EngineParts/SpotLight.cpp
    Source/Thebe/EngineParts/SpotLight.h
    Source/Thebe/EngineParts/DirectionalLight.cpp
    Source/Thebe/EngineParts/DirectionalLight.h
    Source/Thebe/EngineParts/Text.cpp
    Source/Thebe/EngineParts/Text.h
    Source/Thebe/EngineParts/Font.cpp
    Source/Thebe/EngineParts/Font.h
    Source/Thebe/EngineParts/StructuredBuffer.cpp
    Source/Thebe/EngineParts/StructuredBuffer.h
    Source/Thebe/EngineParts/DynamicLineRenderer.cpp
    Source/Thebe/EngineParts/DynamicLineRenderer.h
    Source/Thebe/Math/AnimTransform.cpp
    Source/Thebe/Math/AnimTransform.h
    Source/Thebe/Math/AxisAlignedBoundingBox.cpp
    Source/Thebe/Math/AxisAlignedBoundingBox.h
    Source/Thebe/Math/Frustum.cpp
    Source/Thebe/Math/Frustum.h
    Source/Thebe/Math/Matrix4x4.cpp
    Source/Thebe/Math/Matrix4x4.h
    Source/Thebe/Math/Matrix3x3.cpp
    Source/Thebe/Math/Matrix3x3.h
    Source/Thebe/Math/Matrix2x2.cpp
    Source/Thebe/Math/Matrix2x2.h
    Source/Thebe/Math/Transform.cpp
    Source/Thebe/Math/Transform.h
    Source/Thebe/Math/Vector4.cpp
    Source/Thebe/Math/Vector4.h
    Source/Thebe/Math/Vector3.cpp
    Source/Thebe/Math/Vector3.h
    Source/Thebe/Math/Vector2.cpp
    Source/Thebe/Math/Vector2.h
    Source/Thebe/Math/Ray.cpp
    Source/Thebe/Math/Ray.h
    Source/Thebe/Math/Plane.cpp
    Source/Thebe/Math/Plane.h
    Source/Thebe/Math/LineSegment.cpp
    Source/Thebe/Math/LineSegment.h
    Source/Thebe/Math/Quaternion.cpp
    Source/Thebe/Math/Quaternion.h
    Source/Thebe/Math/Function.cpp
    Source/Thebe/Math/Function.h
    Source/Thebe/Math/Interval.cpp
    Source/Thebe/Math/Interval.h
    Source/Thebe/Math/SphericalCoords.cpp
    Source/Thebe/Math/SphericalCoords.h
    Source/Thebe/Math/Angle.cpp
    Source/Thebe/Math/Angle.h
    Source/Thebe/Math/Polygon.cpp
    Source/Thebe/Math/Polygon.h
    Source/Thebe/Math/PolygonMesh.cpp
    Source/Thebe/Math/PolygonMesh.h
    Source/Thebe/Math/Graph.cpp
    Source/Thebe/Math/Graph.h
    Source/Thebe/Math/Random.cpp
    Source/Thebe/Math/Random.h
    Source/Thebe/Math/GJKAlgorithm.cpp
    Source/Thebe/Math/GJKAlgorithm.h
)

source_group("Source" TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${GAME_ENGINE_SOURCES})

add_library(ThebeGraphicsEngine SHARED
    ${GRAPHICS_ENGINE_SOURCES}
)

target_compile_definitions(ThebeGraphicsEngine PRIVATE
    THEBE_EXPORT
    _USE_MATH_DEFINES
    WIN32_LEAN_AND_MEAN
    NOMINMAX
)

if(CMAKE_BUILD_TYPE MATCHES Debug)
    target_compile_definitions(ThebeGraphicsEngine PUBLIC
        THEBE_LOGGING
    )
endif()

target_link_libraries(ThebeGraphicsEngine PRIVATE
    d3d12.lib
    dxgi.lib
    d3dcompiler.lib
    Xinput9_1_0.lib
    cabinet.lib
    zlib.lib
    Ws2_32.lib
    ParseParty
)

target_link_directories(ThebeGraphicsEngine PRIVATE
    "../ThirdParty/zLib"
)

target_include_directories(ThebeGraphicsEngine PUBLIC
    "Source"
    "DirectXHeader"
    "../ThirdParty/ParseParty/ParseLibrary/Source"
    "../ThirdParty/zLib/include"
)